2002-05-26  Christopher Faylor  <cgf@redhat.com>

	* strace.cc (attach_process): Don't tell process to start stracing
	here.
	(proc_child): Do it here, instead, after first debug event.  This
	should work around inexplicable races with DebugActiveProcess.
	(dostrace): Pass any pid argument to proc_child.

2002-05-23  Joshua Daniel Franklin <joshuadfranklin@yahoo.com>

        * setfacl.c (usage): Standardize usage output. Change return type to
        static void.
        (print_version): New function.
        (longopts): Added longopts for all options.
        (main): Accommodate changes in usage function and new version option.

2002-05-23  Joshua Daniel Franklin <joshuadfranklin@yahoo.com>

	* getfacl.c (usage): Standardize usage output. Change return type to
	static void.
	(print_version): New function.
	(longopts): Added longopts for all options.
	(main): Accommodate new help and version options.

2002-05-22  Joshua Daniel Franklin <joshuadfranklin@yahoo.com>

	* mount.cc (version): New global variable.
	(usage): Standardize usage output.  Accomodate new version option.
	(print_version): New function.
	(longopts): Accomodate new version option.
	(opts): Ditto.
	(main): Ditto.

2002-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* cygpath.cc (usage): Change usage output slightly.

2002-05-20  Joerg Schaible <joerg.schaible@gmx.de>

	* cygpath.cc (main): Add option l to support conversion to   
	Windows long file names.  Refactured code for capital options.
	Support of options from file for capital options.
	(dowin): New function.  Refactured from main.
	(doit): Call long path conversion.
	(get_long_name): New function.
	(get_long_paths): New function.
	(get_long_path_name_w32impl): New function.  Reimplementation
	of Windows API function GetLongPathName (only 98/Me/2000/XP or  
	higher).
	(get_short_name): Call GetShortPathName only once.
	(get_short_paths): Fix calculating buffer size.
	* utils.sgml: Update cygpath section for l option.
